# fit-projects

./: .gitignore  .gitmodules  README.md
1BIT/INC/: uart.vhd  uart_fsm.vhd
1BIT/IOS/prj1/: check  tradelog  zadani.txt
1BIT/IOS/prj2/: .editorconfig  Makefile  base.c  base.h  elf_task.c  main.c  priklady_vystupu.txt  readme.md  rendeer_task.c  santa_task.c  tasks.h
1BIT/IZP/prj1/: .gitignore  Makefile  sheet.c  zadani.txt
1BIT/IZP/prj2/: Makefile  hodnoceni.txt  sps.c  zadani.txt
1MIT/AVS/prj1/: CMakeLists.txt  Dockerfile  MB-xdohun00.txt  Makefile
1MIT/AVS/prj2/: .gitignore  PMC-xdohun00.txt
1MIT/FLP/prj1/: .editorconfig  .gitignore  Makefile  Parser.hs  README.md  TaskOne.hs  TaskTwo.hs  Tree.hs  flp-fun.hs  train_data.txt
1MIT/FLP/prj2/: Containerfile  Makefile  README.md  bashrc  proj2.pl
1MIT/KRY/: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
1MIT/KRY/src/: CMakeLists.txt  args.cpp  main.cpp  sha256.cpp
1MIT/MSP/prj1/: proj1.ipynb  requirements.txt
1MIT/MSP/prj2/: main.ipynb  requirements.txt
1MIT/PDS/: .gitignore  .gitmodules  Makefile  Readme.txt  log-monitor
1MIT/PRL/prj1/: pms.cpp  (+3 more)
1MIT/SUI/prj1/: .editorconfig  .gitignore  CMakeLists.txt  evaluation-type.cc  fc-sui.cc  search-interface.cc  sui-solution.cc
1MIT/UPA/: .editorconfig  .gitignore  README.md  requirements.txt
2BIT/IDS/: README.md  xdohna48_xdohun00.sql
2BIT/IPT/: README.md  example.py  main.py
2BIT/ISS/: Makefile
3BIT/IMP/: .cproject  .editorconfig  .gitignore  .project
3BIT/IMS/: .editorconfig  .gitignore  Makefile  README.md
3BIT/ISA/: .editorconfig  .gitignore  Makefile  README.md  assignment.md
3BIT/IZV/: .editorconfig  .gitignore  requirements.txt
(+153 files in other folders)
